--- a/config/aerospace/aerospace.toml
+++ b/config/aerospace/aerospace.toml
@@ -175,23 +175,49 @@ shift-l = ['join-with right']
 [mode.hyper.binding]
 space = 'mode main'
 esc = 'mode main'
+
 h = 'focus left'
 j = 'focus down'
 k = 'focus up'
 l = 'focus right'
-shift-h = 'move left'
-shift-j = 'move down'
-shift-k = 'move up'
-shift-l = 'move right'
-ctrl-h = 'join-with left'
-ctrl-j = 'join-with down'
-ctrl-k = 'join-with up'
-ctrl-l = 'join-with right'
+left = 'focus left'
+down = 'focus down'
+up = 'focus up'
+right = 'focus right'
+
+cmd-h = 'move left'
+cmd-j = 'move down'
+cmd-k = 'move up'
+cmd-l = 'move right'
+cmd-left = 'move left'
+cmd-down = 'move down'
+cmd-up = 'move up'
+cmd-right = 'move right'
+
+alt-h = 'join-with left'
+alt-j = 'join-with down'
+alt-k = 'join-with up'
+alt-l = 'join-with right'
+alt-left = 'join-with left'
+alt-down = 'join-with down'
+alt-up = 'join-with up'
+alt-right = 'join-with right'
+
+ctrl-l = "workspace next"
+ctrl-h = "workspace prev"
+ctrl-right = "workspace next"
+ctrl-left = "workspace prev"
+
+ctrl-shift-l = ["move-node-to-workspace next", "workspace next"]
+ctrl-shift-h = ["move-node-to-workspace prev", "workspace prev"]
+ctrl-shift-right = ["move-node-to-workspace next", "workspace next"]
+ctrl-shift-left = ["move-node-to-workspace prev", "workspace prev"]
+
 f = 'layout floating tiling'
 a = 'layout accordion horizontal vertical'
 t = 'layout tiles horizontal vertical'
 r = ['flatten-workspace-tree', 'mode main'] # reset layout
-shift-r = ['reload-config', 'mode main']
+cmd-r = ['reload-config', 'mode main']
 tab = 'move-workspace-to-monitor --wrap-around next'
 1 = ['workspace 1', 'mode main']
 2 = ['workspace 2', 'mode main']
@@ -230,13 +256,13 @@ run = ['move-node-to-workspace 3']
 
 [[on-window-detected]]
 if.app-name-regex-substring ='Notes|NotePlan|Capacities|Calendar'
-run = ['nove-node-to-workspace 4']
+run = ['move-node-to-workspace 4']
 
 [[on-window-detected]]
 if.app-name-regex-substring ='Mattermast|Zoom|Thunderbird'
-run = ['nove-node-to-workspace 5']
+run = ['move-node-to-workspace 5']
 
 [[on-window-detected]]
 if.app-name-regex-substring ='Mail|Messages|WhatsApp'
-run = ['nove-node-to-workspace 6']
+run = ['move-node-to-workspace 6']
 
